# homelab

./: .cursor  .dockerignore  .env  .gitignore  Dockerfile2  bun.lockb  download_youtube_video.py  fly.toml  googleImageSearch.ts  hello.py  hi.ipynb  jupyter_server_config.py  main.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  screenshot.ts  server.py  transcribe_audio.py  vit.py
scripts/src/archive/: Parallel_OpenAI.ts  Parallel_llama.ts  agents.ts  agents.tsx  archive_all_email.ts  attempt_diagrams.ts  bun.lockb  claude_artifactAutomation.py  docker_zed_to_gstreamer_to_livekit.ts  download_papers.ts  generate_diagrams.py  links.json  make_db.ts  move_files_to_derp.js  package-lock.json  pdf_to_image.py  playwright.ts  playwright_automate_boring_gscholar_parser.ts  playwright_dynamicland_documentation.ts  precommit.ts  pyproject.toml  readme.md  support-bret.js  support_dynamicland.ts  try.py
scripts/src/archive/docker/: bun  caddy  docker-compose.yml  observablehq-runtime  portainer  zed_dockerfile
scripts/src/archive/install/: webgpu.ts
scripts/src/archive/py/: course_gen_step_2.py  get-all-papers.py  get_arxiv.py  get_images.py  process.py  scholar.py  support-bret.py
scripts/src/archive/web/: README.md  bun.lockb  cloudlfare.sh  guest_instructors.json  package-lock.json  package.json  private_key.txt  roomba-drive.py  roomba_anything.py  support-dynamicland.org
scripts/src/archive/web/src/: readme.md
scripts/src/archive/web/src/utils/: build.ts  deno-webgpu-app.ts  getMimeType.ts  getPublicIP.ts  getSyntheticData.js  (+6 more)
(+1429 files in other folders)
