[project]
name = "homelab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytubefix>=8.8.2",
    "jupyter-ai>=2.28.4",
    "jupyter>=1.1.1",
    "langchain-anthropic>=0.1.23",
    "fastapi[standard]>=0.115.6",
    "uvicorn>=0.23.2",
    "astral>=3.2",
    "browser-use>=0.1.27",
]

# Expose an entry point for your FastAPI server
[project.scripts]
server =  "uv run uvicorn main:home --reload"

