[project]
name = "your_project_name"
version = "0.1.0"
description = "A brief description of your project"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
requires-python = ">=3.8"
# Add any additional metadata as needed

[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "A brief description of your project"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# Add your project dependencies here
# e.g., requests = "^2.25.1"

[tool.poetry.dev-dependencies]
# Add your development dependencies here
# e.g., pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"